LHB - DB에 있는 itemNo로는 포트폴리오 추가 안되는 기능 구현[완]